--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,23 +40,36 @@ body {
 }
 
 .press {
-    margin-top: 20px;
+    margin-top: -160px;
 }
 
 .wins {
-    margin-top: 80px;
+    margin-top: 30px;
 }
 
 .current {
-    margin-top: 50px;
+    margin-top: 40px;
     font-size: 25px;
     text-decoration: underline;
 }
 
 .number {
-    margin-top: 70px;
+    margin-top: 60px;
 }
 
 .letters {
+    margin-top: 40px;
+}
+
+.correctGuess {
+    margin-top: 40px;
+    font-size: 25px;
+    text-decoration: underline;
+}
+
+.mortal-kombat {
+    margin-left: 830px;
     margin-top: 50px;
+    height: 110px;
+    width: 110px;
 }
