--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url("file:///Users/JChingas87/Desktop/Bootcamp/homework/homework3/Hangman-Game/assets/images/karate.jpg");
+    background-image: url("../images/karate.jpg");
 }
 
 #container {
